src/test/ui/unsafe-const-fn.stderr
error[E0133]: call to unsafe function requires unsafe function or block
  --> $DIR/unsafe-const-fn.rs:19:18
   |
LL | const VAL: u32 = dummy(0xFFFF);
   |                  ^^^^^^^^^^^^^ call to unsafe function

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0133"
